--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "production": "npm run build && cross-env BUILD_MODE=production node ./build/src/server.js",
+    "production": "cross-env BUILD_MODE=production node ./src/server.js",
     "dev": "cross-env BUILD_MODE=dev nodemon ./src/server.js"
   },
   "author": "HoangThaiDev",
