--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "server-booking",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "production": "cross-env BUILD_MODE=production node ./src/server.js",
-    "dev": "cross-env BUILD_MODE=dev nodemon ./src/server.js"
+    "dev": "cross-env BUILD_MODE=dev nodemon ./src/server.js",
+    "production": "cross-env BUILD_MODE=production node ./src/server.js"
   },
   "author": "HoangThaiDev",
   "license": "ISC",
